# openal-soft

./: .travis.yml  CMakeLists.txt
utils/: bin2h.c
utils/bin2h/: CMakeLists.txt
utils/native-tools/: bin2h.c
